--- a/src/components/layout/sidebar/Sidebar.module.scss
+++ b/src/components/layout/sidebar/Sidebar.module.scss
@@ -1,3 +1,19 @@
 .sidebar {
-	@apply flex items-center flex-col justify-between;
+	@apply flex items-center flex-col justify-between border-r border-border py-layout;
+
+	a {
+		@apply block mb-8;
+
+		&.active > svg {
+			@apply text-white;
+		}
+	}
+
+	svg {
+		@apply text-[#7c7275] duration-300 ease-in-out transition-colors;
+
+		&:hover {
+			@apply text-white;
+		}
+	}
 }
